# serenity-with-mongodb-template

./: .gitignore  Cargo.toml
src/: db.rs  main.rs  model.rs
src/commands/: adm.rs  duelo.rs  empresas.rs  help_cassino.rs  highlow.rs  mod.rs  niquel.rs  par_ou_impar.rs  profile.rs  rank.rs  rec.rs
src/events/: mod.rs
