[package]
name = "cassino_dc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
lazy_static = "1.5.0"
poise = "0.6.1"
rand = "0.10.2"
serde = "1.0.203"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dependencies.tokio]
version = "1.52.3"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.5"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.mongodb]
version = "3.8.0"

[profile.dev]
debug = 0
incremental = false
codegen-units = 1
